--- a/todo/src/assets/css/style.css
+++ b/todo/src/assets/css/style.css
@@ -22,7 +22,7 @@ input[type="text"]::placeholder{font-size: 16px; font-weight: 500; color: var(--
 button.primarybtn, button.secondarybtn{width: 100%; border: 0; background: var(--color-blue); border-radius: 6px; font-size: 18px; font-weight: 500; line-height: 19px; color: var(--color-white); padding: 14px; box-sizing: border-box; cursor: pointer; transition: all 0.3s linear;}
 button.primarybtn:hover, button.secondarybtn:hover{box-shadow: 0px 2px 12px rgb(152 169 247); background: var(--color-darkblue);}
 button.secondarybtn{background: var(--color-red);}
-button.secondarybtn:hover{background: var(--color-darkred);}
+button.secondarybtn:hover{background: var(--color-darkred); box-shadow: 0px 2px 12px rgb(255 119 119);}
 
 .todosec{padding: 50px 0; position: relative;}
 .todosec .container{width: min(980px, 96%); }
@@ -39,12 +39,6 @@ button.secondarybtn:hover{background: var(--color-darkred);}
 .tasklist .taskrightsec{width: 95px;}
 .tasklist .taskrightsec ul{display: flex; flex-flow: row nowrap; gap: 15px;}
 .tasklist .taskrightsec ul li{padding: 0; border-radius: 0; box-shadow: 0;}
-/* .tasklist .taskrightsec button{border: 0; background: var(--color-green); color: var(--color-white); padding: 10px 12px; font-size: 16px; font-weight: 500; line-height: 19px; color: var(--color-white); letter-spacing: 0.5px; border-radius: 6px; cursor: pointer; transition: all 0.3s linear;  display: inline-flex ; align-items: center;}
-.tasklist .taskrightsec button.complete:hover{background: var(--color-darkgreen);} */
-/* .tasklist .taskrightsec button.delete{background: var(--color-red);}
-.tasklist .taskrightsec button.delete:hover{background: var(--color-darkred);}
-.tasklist .taskrightsec button.edit{background: var(--color-blue);}
-.tasklist .taskrightsec button.edit:hover{background: var(--color-darkblue);} */
 
 .iconbox{font-size: 0; line-height: 0}
 .iconbox svg{width: 22px; height: 22px; display: inline-block; fill: var(--color-white);}
@@ -59,3 +53,8 @@ button.secondarybtn:hover{background: var(--color-darkred);}
 .edittasksec ul li input[type="text"]::placeholder{font-size: 16px; font-weight: 500; color: var(--color-black);}
 .edittasksec ul li input[type="text"]:focus{outline: none;}
 .edittasksec ul li button { width: 100%; border: 0; background: var(--color-blue); border-radius: 6px; font-size: 18px; font-weight: 500; line-height: 19px; color: var(--color-white); padding: 14px; box-sizing: border-box; cursor: pointer; transition: all 0.3s linear; }
+
+.modalsec{position: fixed; top: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;} 
+.modalsec .modalbox{width: min(480px, 100%); padding: 20px; border-radius: 12px; background: var(--color-white); box-shadow: 0px 2px 12px rgb(124, 124, 124);}
+.modalsec .modalbox p{font-size: 18px; font-weight: 500; margin-bottom: 20px; text-align: center;}
+.modalsec .modalbox ul{display: flex; flex-flow: row nowrap; gap: 20px; justify-content: center;} 
