--- a/todo/src/assets/css/style.css
+++ b/todo/src/assets/css/style.css
@@ -54,7 +54,7 @@ button.secondarybtn:hover{background: var(--color-darkred); box-shadow: 0px 2px 
 .edittasksec ul li input[type="text"]:focus{outline: none;}
 .edittasksec ul li button { width: 100%; border: 0; background: var(--color-blue); border-radius: 6px; font-size: 18px; font-weight: 500; line-height: 19px; color: var(--color-white); padding: 14px; box-sizing: border-box; cursor: pointer; transition: all 0.3s linear; }
 
-.modalsec{position: fixed; top: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;} 
+.modalsec{position: fixed; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;} 
 .modalsec .modalbox{width: min(480px, 100%); padding: 20px; border-radius: 12px; background: var(--color-white); box-shadow: 0px 2px 12px rgb(124, 124, 124);}
 .modalsec .modalbox p{font-size: 18px; font-weight: 500; margin-bottom: 20px; text-align: center;}
 .modalsec .modalbox ul{display: flex; flex-flow: row nowrap; gap: 20px; justify-content: center;} 
